[package]
name = "macro-input"
version = "0.3.0"
authors = ["Tom Dohrmann <erbse.13@gmx.de>"]
edition = "2018"
license = "WTFPL"
repository = "https://github.com/Freax13/macro-input"
description = "a library for parsing macro inputs"

[workspace]
members = ["macro-input-core", "macro-input-macros"]

[dependencies]
macro-input-core = { path = "macro-input-core", version = "0.3.0" }
macro-input-macros = { path = "macro-input-macros", optional = true, version = "0.3.0" }
syn = "1.0"

[features]
default = ["macros"]
macros = ["macro-input-macros"]