[package]
name = "macro-input-core"
version = "0.2.0"
authors = ["Tom Dohrmann <erbse.13@gmx.de>"]
edition = "2018"
license = "WTFPL"
repository = "https://github.com/Freax13/macro-input"
description = "the core part of macro-input"

[dependencies]
macro-compose = { version = "0.1", optional = true }
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

[features]
default = []
legacy = ["macro-compose"]