[package]
name = "macro-input-macros"
version = "0.3.0"
authors = ["Tom Dohrmann <erbse.13@gmx.de>"]
edition = "2018"
license = "WTFPL"
repository = "https://github.com/Freax13/macro-input"
description = "the macro part of macro-input"

[lib]
proc-macro = true

[dependencies]
macro-compose = "0.1"
macro-input-core = { path = "../macro-input-core", version = "0.3.0", features = ["legacy"] }

syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

heck = "0.3"

[dev-dependencies]
macro-input = { path = "..", version = "0.3.0" }
